syntax = "proto3";

package pb;

service StringService {
	rpc Uppercase (UppercaseRequest) returns (UppercaseResponse) {}
	rpc Count (CountRequest) returns (CountResponse) {}
}

message UppercaseRequest {
	string s = 1;
}

message UppercaseResponse {
	string v = 1;
	string err = 2;
}

message CountRequest {
	string s = 1;
}

message CountResponse {
	int64 v = 1;
}

message HealthCheckRequest {
	string service = 1;
}

message HealthCheckResponse {
	enum ServingStatus {
		UNKNOWN = 0;
		SERVING = 1;
		NOT_SERVING = 2;
	}
	ServingStatus status = 1;
}

service Health {
	rpc Check(HealthCheckRequest) returns (HealthCheckResponse);

	rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}
